[cs-ui] CSButton - prevented active styles visibility on Firefox if component is disabled

--- a/cs-ui-components/src/sass/components/_cs-button.scss
+++ b/cs-ui-components/src/sass/components/_cs-button.scss
@@ -83,6 +83,7 @@
 	}
 	&[disabled] {
 		cursor: default;
+		pointer-events: none;
 	}
 	/* ALL BUTTONS PROPERTIES */
 	&.cs-btn-round {
